[package]
name = "saber"
version = "0.1.0"
authors = ["Daan Sprenkels <hello@dsprenkels.com>"]
edition = "2018"
documentation = "https://dsprenkels.github.io/saber-rust/"
repository = "https://github.com/dsprenkels/saber-rust"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "post-quantum-cryptography"]
license = "CC0"
license-file = "LICENSE"
maintenance = { status = "as-is" }
publish = false

[dependencies]
rand_os = "0.1"
secret_integers = "0.1.3"

[dependencies.sha3]
version = "0.8"
default-features = false

[build-dependencies]
cc = "1.0"

[features]
reftest = []
